--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="title_notifications">Notifications</string>
     <string name="temperature">%d˚</string>
     <string name="feels_like">Feels Like</string>
+    <string name="hi_temp">Hi: %d˚</string>
 </resources>
