--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="feels_like">Feels Like</string>
     <string name="hi_temp">Hi: %d˚</string>
     <string name="title_activity_compose">ComposeActivity</string>
+    <string name="home">home</string>
 </resources>
